--- a/design/less/style.less
+++ b/design/less/style.less
@@ -6,7 +6,14 @@
 @dark-bg-color: #000;
 @light-bg-color: #fff;
 
-@accent-color: #ff707d;
+/*
+  Interesting colors to try:
+  #c7ff70
+  #ff707d
+  #70d5ff
+*/
+
+@accent-color: #70d5ff;
 @link-color-dark: #000;
 @link-color-light: #fff;
 
@@ -22,6 +29,31 @@
 @dark-grey-alpha: rgba(0, 0, 0, 0.9);
 @medium-grey-alpha: rgba(0, 0, 0, 0.4);
 @font-baseline-px: 12px;
+
+/* fonts */
+@font-face {
+    font-family: 'alfphabetiv';
+    src: url('/fonts/alfphabet/alfphabet-iv-webfont.eot');
+    src: url('/fonts/alfphabet/alfphabet-iv-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/alfphabet/alfphabet-iv-webfont.woff2') format('woff2'),
+         url('/fonts/alfphabet/alfphabet-iv-webfont.woff') format('woff'),
+         url('/fonts/alfphabet/alfphabet-iv-webfont.ttf') format('truetype'),
+         url('/fonts/alfphabet/alfphabet-iv-webfont.svg#alfphabetiv') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('/fonts/roboto/roboto_regular_macroman/Roboto-Regular-webfont.eot');
+    src: url('/fonts/roboto/roboto_regular_macroman/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/roboto/roboto_regular_macroman/Roboto-Regular-webfont.woff') format('woff'),
+         url('/fonts/roboto/roboto_regular_macroman/Roboto-Regular-webfont.ttf') format('truetype'),
+         url('/fonts/roboto/roboto_regular_macroman/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 /* dumb mixins */
 .responsive {
@@ -50,7 +82,7 @@ html, body {
 }
 body {
   background-color: @dark-bg-color;
-  font-family: 'Roboto';
+  font-family: 'robotoregular', 'Roboto', 'Helvetica', sans-serif;
   font-weight: light;
   font-size: @font-baseline-px;
 }
@@ -140,7 +172,7 @@ div.elastic.inner {
   -ms-transform: translate(0%, -50%);
 
   h1 {
-    font-family: 'Alfphabet IV', 'Alfphabet';
+    font-family: 'alfphabetiv', 'Alfphabet IV', 'Alfphabet', 'Helvetica', sans-serif;
     font-size: 3.2em;
     color: @text-on-dark-bg;
     text-shadow: 0 0 0.5em @medium-grey-alpha;
