--- a/design/less/style.less
+++ b/design/less/style.less
@@ -14,6 +14,7 @@
 */
 
 @accent-color: #70d5ff;
+@accent-complementary: #c7ff70;
 @link-color-dark: #000;
 @link-color-light: #fff;
 
@@ -69,6 +70,41 @@
   background-color: transparent;
 }
 
+/* core controls */
+.searchForm {
+  input[type=search] {
+    .responsive;
+    /* color: @text-on-light-bg-placeholder; */
+    font-size: 1.6em;
+    line-height: 1.8em;
+    padding-left: 0.5em;
+    text-align: left;
+    min-width: 20em;
+    border: 0;
+    border-top: 2px solid @medium-grey-alpha;
+    box-shadow: 0 0 0.5em @dark-grey-alpha;
+  }
+  input[type=submit] {
+    .responsive;
+    display: inline-block;
+    background-color: @accent-color;
+    color: @link-color-dark;
+    border: 1px solid @accent-color;
+    border-top-width: 2px;
+    font-size: 1.6em;
+    line-height: 1.8em;
+    text-align: center;
+    padding: 0 0.8em;
+    &:hover {
+      color: @text-on-dark-bg;
+      text-shadow: 0 -1px 0 @light-grey-alpha;
+
+      transition: all 0.2s;
+    }
+  }
+}
+
+
 /*
   "main"/desktop search styles
   TODO: move to media query
@@ -81,7 +117,8 @@ html, body {
   overflow: hidden;
 }
 body {
-  background-color: @dark-bg-color;
+  &.main { background-color: @dark-bg-color; }
+  background-color: @light-bg-color;
   font-family: 'robotoregular', 'Roboto', 'Helvetica', sans-serif;
   font-weight: light;
   font-size: @font-baseline-px;
@@ -115,10 +152,62 @@ div.elastic.inner {
 #notTorBrowserWarning { display: none; }
 
 #ahmiaHeader {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  border-bottom: 1px solid @medium-grey-alpha;
+  &.mini { 
+    h1 { display: none; } 
+    #searchForm { display: none; }
+
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    border-bottom: 1px solid @medium-grey-alpha;
+  };
+  &.maxi {
+    .maxiContent {
+       margin: 0 1.0em 0;
+       padding-bottom: 1.0em;
+       h1 {
+        font-family: 'alfphabetiv', 'Alfphabet IV', 'Alfphabet', 'Helvetica', sans-serif;
+        font-size: 2.0em;
+        a {
+          color: rgba(0,0,0,0.7);
+          box-shadow: none;
+          text-decoration: none;
+          transition: 0.3s all;
+          &:hover {
+            text-decoration: none;
+            color: @text-on-dark-bg;
+            text-shadow: 0 -1px 0 @medium-grey-alpha;
+            transition: 0.3s all;
+          }
+        }
+        margin: 0.5em 0;
+        padding: 0;
+        display: block; float: left;
+      }
+      .searchForm {
+        display: block;
+        float: left;
+        margin-left: 2.0em;
+        input {
+          font-size: 1.3em;
+          line-height: 2.0em;
+          margin: 0.5em 0;
+        }
+        input[type="search"] {
+          box-shadow: 0 0 0.1em @medium-grey-alpha;
+        }
+        input[type="submit"] {
+          background-color: @accent-complementary;
+          border: 1px solid @accent-complementary;
+          margin-left: 0.5em;
+          box-shadow: 0 0 0.1em @medium-grey-alpha;
+        }
+      }
+      nav {
+        vertical-align: bottom;
+      }
+    }
+  }
 
   .responsive;
   #collapseIfResponsive { display: none; }
@@ -176,38 +265,6 @@ div.elastic.inner {
     font-size: 3.2em;
     color: @text-on-dark-bg;
     text-shadow: 0 0 0.5em @medium-grey-alpha;
-  }
-
-  #ahmiaSearchArea {
-    input[type=search] {
-      .responsive;
-      color: @text-on-light-bg-placeholder;
-      font-size: 1.6em;
-      line-height: 1.8em;
-      padding-left: 0.5em;
-      text-align: left;
-      min-width: 20em;
-      border: 0;
-      border-top: 2px solid @medium-grey-alpha;
-      box-shadow: 0 0 0.5em @dark-grey-alpha;
-    }
-    input[type=submit] {
-      .responsive;
-      background-color: @accent-color;
-      color: @link-color-dark;
-      border: 1px solid @accent-color;
-      border-top-width: 2px;
-      font-size: 1.6em;
-      line-height: 1.8em;
-      text-align: center;
-      padding: 0 0.8em;
-      &:hover {
-        color: @text-on-dark-bg;
-        text-shadow: 0 -1px 0 @light-grey-alpha;
-
-        transition: all 0.2s;
-      }
-    }
   }
 
   #ahmiaDescriptionArea {
