clean breakage on home from results styles

--- a/design/less/style.less
+++ b/design/less/style.less
@@ -267,6 +267,10 @@ div.elastic.inner {
     text-shadow: 0 0 0.5em @medium-grey-alpha;
   }
 
+  #ahmiaSearchArea {
+    .searchForm;
+  }
+
   #ahmiaDescriptionArea {
     margin-top: 2.5em;
     border-top: 1px solid @medium-white-alpha;
