--- a/design/less/style.less
+++ b/design/less/style.less
@@ -14,7 +14,9 @@
 */
 
 @accent-color: #70d5ff;
+@accent-color-alpha: rgba(112, 213, 255, 0.2);
 @accent-complementary: #c7ff70;
+@accent-complementary-alpha: rgba(199, 255, 112, 0.2);
 @link-color-dark: #000;
 @link-color-light: #fff;
 
@@ -30,6 +32,21 @@
 @dark-grey-alpha: rgba(0, 0, 0, 0.9);
 @medium-grey-alpha: rgba(0, 0, 0, 0.4);
 @font-baseline-px: 12px;
+
+/*
+  LINK COLORS
+
+  Links in search results are different than others.
+  This is for consistency -- nearly all search engines
+  look like this, there is no need to change that here
+*/
+@search-result-link-color: #00f;
+@search-result-link-color-visited: #30f;
+@search-result-link-color-active: #00f;
+@search-result-metadata-subdued: @medium-grey-alpha;
+@search-result-metadata-link-color: @medium-grey-alpha;
+@search-result-metadata-link-color-visited: @medium-grey-alpha;
+@search-result-metadata-link-color-active: @medium-grey-alpha;
 
 /* fonts */
 @font-face {
@@ -115,10 +132,9 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 body {
-  &.main { background-color: @dark-bg-color; }
+  &.main { background-color: @dark-bg-color; overflow: hidden; }
   background-color: @light-bg-color;
   font-family: 'robotoregular', 'Roboto', 'Helvetica', sans-serif;
   font-weight: light;
@@ -153,6 +169,7 @@ div.elastic.inner {
 #notTorBrowserWarning { display: none; }
 
 #ahmiaHeader {
+  overflow: hidden;
   &.mini {
     h1 { display: none; }
     #searchForm { display: none; }
@@ -293,10 +310,82 @@ div.elastic.inner {
 
 #ahmiaResultsPage {
   margin: 1.0em;
+  div.resultsSubheader {
+    p {
+      color: @medium-grey-alpha;
+      margin: 0; padding: 0;
+    }
+    border-bottom: 1px solid @light-grey-alpha;
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+  }
   p {
     font-size: 1.1em;
     color: @text-on-light-bg;
     margin: 1em 0;
     line-height: 1.7em;
+  }
+  ol {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 -1em;
+    li {
+      padding: 1em;
+      transition: background-color 0.3s;
+      &.selected {
+        background-color: @accent-complementary-alpha;
+        transition: background-color 0.3s;
+        h4 {
+          a:link {
+            /* mimic li h4 a:hover */
+            text-decoration: none;
+          }
+        }
+      }
+      p, h4 {
+        /* restrict width for legibility */
+        max-width: 70%;
+      }
+      h4 {
+        margin: 0; padding: 0;
+        font-size: 1.6em;
+        letter-spacing: -0.05em;
+        line-height: 1em;
+        a {
+          &:link {
+            color: @search-result-link-color;
+            text-decoration: underline;
+          }
+          &:hover {
+            color: @search-result-link-color-active;
+            text-decoration: none;
+          }
+          &:visited {
+            color: @search-result-link-color-visited;
+            text-decoration: underline;
+          }
+        }
+      }
+      p {
+        margin: 0.7em 0 0;
+      }
+      p.metadata {
+        margin: 0.5em 0 1em;
+        color: @search-result-metadata-subdued;
+        a {
+          &:link {
+            color: @search-result-metadata-link-color;
+            text-decoration: underline;
+          }
+          &:visited {
+            color: @search-result-metadata-link-color-visited;
+            text-decoration: none;
+          }
+          &:active {
+            color: @search-result-metadata-link-color-active;
+          }
+        }
+      }
+    }
   }
 }
