--- a/design/less/style.less
+++ b/design/less/style.less
@@ -347,9 +347,9 @@ div.elastic.inner {
         max-width: 70%;
       }
       h4 {
+        font-weight: normal;
         margin: 0; padding: 0;
         font-size: 1.6em;
-        letter-spacing: -0.05em;
         line-height: 1em;
         a {
           &:link {
@@ -370,7 +370,7 @@ div.elastic.inner {
         margin: 0.7em 0 0;
       }
       p.metadata {
-        margin: 0.5em 0 1em;
+        margin: 0.5em 0;
         color: @search-result-metadata-subdued;
         a {
           &:link {
@@ -379,10 +379,10 @@ div.elastic.inner {
           }
           &:visited {
             color: @search-result-metadata-link-color-visited;
-            text-decoration: none;
           }
-          &:active {
+          &:hover {
             color: @search-result-metadata-link-color-active;
+            text-decoration: none;
           }
         }
       }
