--- a/design/less/style.less
+++ b/design/less/style.less
@@ -397,4 +397,58 @@ div.elastic.inner {
       }
     }
   }
+  div.pager {
+    border-top: 1px solid @light-grey-alpha;
+    padding-top: 1em;
+    padding-bottom: 5em;
+    overflow: hidden;
+    a {
+      &:link {
+        color: @search-result-link-color;
+        text-decoration: none;
+      }
+      &:hover {
+        color: @search-result-link-color-active;
+        text-decoration: underline;
+      }
+      &:visited {
+        color: @search-result-link-color-visited;
+      }
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      float: left;
+      li {
+        font-size: 1.1em;
+        margin: 0 1em 0 0; padding: 0;
+        list-style-type: none;
+        display: inline-block;
+
+        &:first-child {
+          margin-right: 2em;
+        }
+        &:last-child {
+          margin-left: 2em;
+        }
+        &.endcap {
+          a:link, a:hover, a:visited {
+            text-decoration: underline;
+          }
+        }
+        &.limited {
+          a:link, a:hover, a:visited {
+            color: @search-result-metadata-subdued;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+    p.footer {
+      margin: 0; padding: 0;
+      font-size: 1.1em;
+      float: right;
+    }
+  }
 }
