make current page stand out

--- a/design/less/style.less
+++ b/design/less/style.less
@@ -432,6 +432,12 @@ div.elastic.inner {
         &:last-child {
           margin-left: 2em;
         }
+        &.active {
+          a:link, a:hover, a:visited {
+            color: @text-on-light-bg;
+            text-decoration: none;
+          }
+        }
         &.endcap {
           a:link, a:hover, a:visited {
             text-decoration: underline;
