broke index styles

--- a/design/less/style.less
+++ b/design/less/style.less
@@ -127,9 +127,9 @@
   input[type=submit] {
     .responsive;
     display: inline-block;
-    background-color: @accent-color;
+    background-color: @accent-complementary;
     color: @link-color-dark;
-    border: 1px solid @accent-color;
+    border: 1px solid @accent-complementary;
     border-top-width: 2px;
     font-size: 1.6em;
     line-height: 1.8em;
@@ -334,7 +334,7 @@ div.elastic.inner {
     border-top: 1px solid @medium-white-alpha;
     padding-top: 2.3em;
     a {
-      &:link { color: @accent-color; text-decoration: none; }
+      &:link { color: @accent-complementary; text-decoration: none; }
       &:hover { text-decoration: underline; transition: all 0.2s; }
       &:visited { text-decoration: underline; transition: all 0.2s; }
     }
