add sponsor images

--- a/design/less/style.less
+++ b/design/less/style.less
@@ -569,6 +569,11 @@ div.elastic.inner {
       li {
         display: inline-block;
         margin-right: 1em;
+        img {
+          border: 0;
+          height: 60px;
+          opacity: 0.9;
+        }
       }
     }
     margin-bottom: 3em;
