add hashcash-style proof of work antispam draft

--- a/design/less/style.less
+++ b/design/less/style.less
@@ -136,7 +136,7 @@
     text-align: center;
     padding: 0 0.8em;
     &:hover {
-      color: @text-on-dark-bg;
+      color: @common-link-color-visited;
       text-shadow: 0 -1px 0 @light-grey-alpha;
 
       transition: all 0.2s;
