add disclaimer page

--- a/design/less/style.less
+++ b/design/less/style.less
@@ -503,6 +503,40 @@ div.elastic.inner {
   }
 }
 
+#ahmiaDisclaimer {
+  width: 70%;
+  max-width: 960px;
+  margin: 0 auto 3em;
+  padding-top: 1em;
+
+  h2, h3, h4 {
+    font-family: 'robotolight', Roboto, Helvetica, sans-serif;
+  }
+  h2 {
+    font-size: 1.8em;
+  }
+  h3 {
+    font-size: 1.5em;
+  }
+  h4 {
+    font-size: 1.3em;
+  }
+
+  p {
+    font-size: 1.3em;
+    line-height: 1.8em;
+    text-align: left;
+    margin-bottom: 1em;
+    padding: 0;
+
+    &.end {
+      border-bottom: 1px solid @light-grey-alpha;
+      margin-bottom: 2em;
+      padding-bottom: 2em;
+    }
+  }
+}
+
 #ahmiaAddOnion {
   width: 70%;
   max-width: 960px;
